# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)

AC_INIT([vyatta-service-twamp], 1.0, [DL-vyatta-help@att.com])

AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 subdir-objects])
AC_PREFIX_DEFAULT([/opt/vyatta])

AC_CONFIG_FILES(
  [Makefile])

AC_OUTPUT

